spacing fixes

--- a/src/components/control-bar/control-bar.module.scss
+++ b/src/components/control-bar/control-bar.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/index.scss';
 
 .controlBar {
-  margin: 25px 0;
+  margin: 15px 0;
   text-align: right;
   align-items: center;
 }
