--- a/src/components/layouts/story/story.module.scss
+++ b/src/components/layouts/story/story.module.scss
@@ -24,7 +24,6 @@ h2 {
 }
 
 .context-statement {
-  font-size: 1.0625rem;
   font-weight: 300;
   line-height: 1.5rem;
   margin-bottom: 0;
