--- a/src/components/section-elements/story-section-heading/story-section-heading.module.scss
+++ b/src/components/section-elements/story-section-heading/story-section-heading.module.scss
@@ -169,6 +169,8 @@ $fedEmpBlue: #2272ce;
   }
 
   .header {
+    margin-bottom: 0;
+    
     .headerTitle {
       margin-top: 0;
       line-height: 3.125rem;
